# fire-ai

./: .coverage  .droid.yaml  .env.example  .gitignore  .gitmessage  .replit  AGENTS.md  DEFECTS_E2E_TEST_SUMMARY.md  FM-ENH-005-IMPLEMENTATION-SUMMARY.md  MIGRATION_QUICK_START.md  MIGRATION_VALIDATION_GUIDE.md  PHASE4_INDEX.md  PHASE4_QUICK_REFERENCE.md  PHASE4_SUMMARY.md  README.md  REVIEW_SUMMARY.md  TREND_ANALYSIS_IMPLEMENTATION_SUMMARY.md  WEEK1_VALIDATION_REPORT.md  architecture.md  code_quality_check.sh  cursor_rules.md  data_model.md  deployment.toml  example_e2e_demo.py  fire-ai_brandkit.txt  package-lock.json  package.json  pyproject.toml  pytest.ini  render.yaml  replit.md  run.sh  run_e2e_tests.py  setup_env.sh  start_supervisor.sh  test_auth.py  test_commands.toml  validate_defects_migration.py  validate_migration.py  verify_models.py
.cursor/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
alembic/: env.py
attached_assets/: Pasted-1-Primary-Objective-Achieve-TRUE-100-TDD-compliance-by-fixing-the-remaining-25-of-failing-tests--1758500180570_1758500180572.txt  Pasted-1-Primary-Objective-Achieve-a-100-pass-rate-across-all-test-suites-by-fixing-the-specific-mocking--1758578206814_1758578206816.txt  Pasted-1-Primary-Objective-Achieve-actual-empirically-proven-100-TDD-compliance-for-Phase-2-This-prompt-1758514045389_1758514045390.txt  Pasted-1-Primary-Objective-Remediate-critical-security-vulnerabilities-and-achieve-100-TDD-v4-0-contract--1758498538002_1758498538004.txt  Pasted-CRITICAL-FIX-Generate-a-NEW-unique-JWT-SECRET-KEY-for-this-project-CONTEXT-The-current-JWT-SECRE-1760672746581_1760672746582.txt  Pasted-Complete-API-Implementation-Step-3-1-Standardized-Error-Handling-python-Create-src-app-utils-erro-1758422957751_1758422957752.txt  Pasted-Final-Production-Prompt-FireMode-Backend-on-Replit-v5-TDD-Compliant-Hybrid-1-Primary-Objective-1758160538138_1758160538139.txt  Pasted-Implement-the-v1-users-endpoints-to-provide-user-profile-and-compliance-history-retrieval-This-invo-1758235357162_1758235357164.txt  Pasted-One-Shot-Amendment-Prompt-FireMode-Phase-1-Production-Hardening-v1-3-1-Primary-Objective-Your-m-1758259382845_1758259382845.txt  Pasted-Our-next-task-is-to-create-comprehensive-documentation-for-the-project-This-will-involve-two-main-p-1758167496370_1758167496371.txt  Pasted-Prompt-2-Phase-2-Checkpoint-2-Server-Side-Filtering-Vector-Clock-Pagination-plaintext-One-S-1758423927452_1758423927453.txt  Pasted-Prompt-3-Phase-2-Checkpoint-3-Contract-Testing-Resilience-plaintext-One-Shot-Prompt-FireMo-1758425783377_1758425783378.txt  (+2 more)
docker/: compose.yml
docs/: ATOMIC_REPAIR_SUMMARY.md  CONTRIBUTING.md  (+23 more)
services/api/: .coverage  PHASE3_VERIFICATION.md  coverage.json  pyproject.toml
services/api/app/: main.py
services/api/schemas/: loader_dynamodb.py  registry.py
services/api/schemas/common/: base.json
services/api/schemas/requests/: post_results_v1.json
services/api/schemas/responses/: error_422_v1.json  post_results_v1.json
services/api/scripts/: README.md  generate_demo_token.py  seed_demo_data.py
services/api/src/: __init__.py
services/api/src/app/: config.py
services/api/src/app/middleware/: __init__.py  schema_validation.py
services/api/tests/: test_health.py  test_schema_registry.py  test_schema_validation_middleware.py
services/api/tests/integration/: test_e2e_validation.py
services/api/tests/performance/: analyze_results.py  profile_go_service.sh  run_all_tests.sh  test_load_100k.py
(+245 files in other folders)
