[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "automerge>=0.1.2",
    "cryptography>=46.0.1",
    "fastapi>=0.116.2",
    "httpx>=0.28.1",
    "locust>=2.40.5",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn>=0.35.0",
]
