[tool.poetry]
name = "firemode-compliance"
version = "0.1.0"
description = "FireMode Compliance Platform Backend"
authors = ["FireMode Team"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "0.116.2"
uvicorn = "0.35.0"
pydantic = "2.11.9"
python-jose = {extras = ["cryptography"], version = "3.5.0"}
python-multipart = "^0.0.6"
cryptography = "46.0.1"
httpx = "0.27.0"
sqlalchemy = "2.0.31"
psycopg2-binary = "2.9.10"
semver = "3.0.2"
alembic = "1.13.2"
pydantic-settings = "2.3.4"
automerge = "^0.1.2"
pandas = "^2.3.2"
pyjwt = "^2.10.1"
opentelemetry-instrumentation-fastapi = "^0.58b0"
asyncpg = "^0.30.0"
boto3 = "^1.35.0"
cachetools = "^5.3.0"
prophet = "^1.1.0"
reportlab = "^4.0.0"
scipy = "^1.11.0"
numpy = "^1.24.0"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pact-python = "^2.1.0"
chaostoolkit = "^1.19.0"
toxiproxy-python = "^0.1.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.21.0"
locust = "2.28.0"
matplotlib = "^3.8.0"
psutil = "^5.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
