[tool.poetry]
name = "fire-ai-api"
version = "0.1.0"
description = "Fire-AI minimal API stub"
authors = ["Alex Wilson <alex@koneticai.com>"]
# Keep install lightweight; we won't package ourselves now.
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = "^0.104.1"
uvicorn = {version="^0.24.0.post1", extras=["standard"]}
structlog = "^23.3.0"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
ruff = "^0.6.0"
black = "^24.8.0"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
